--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(SFML_STATIC_LIBRARIES TRUE)
 find_package(SFML 2.5 REQUIRED graphics)
 
 include_directories(${SFML_INCLUDE_DIR})
-add_executable (labirint-pathfinder "src/main.cpp" )
+add_executable (labirint-pathfinder "src/main.cpp" "src/GraphNode.h" "src/calculateCosts.h" "src/calculateCosts.cpp" "src/PathfinderGUI.h" "src/buildPath.h" "src/buildPath.cpp")
 
 target_link_libraries(labirint-pathfinder sfml-graphics)
