--- a/src/Labyrinth pathfinder.vcxproj.filters
+++ b/src/Labyrinth pathfinder.vcxproj.filters
@@ -1,12 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="Current" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="buildPath.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="calculateCosts.cpp">
-      <Filter>Source files</Filter>
-    </ClCompile>
     <ClCompile Include="HeaderButton.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
@@ -43,14 +37,14 @@
     <ClCompile Include="CostsCalculationAnimation.cpp">
       <Filter>Source files</Filter>
     </ClCompile>
+    <ClCompile Include="PathRestoringAnimation.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="PathFindingAnimation.cpp">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="buildPath.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
-    <ClInclude Include="calculateCosts.h">
-      <Filter>Header files</Filter>
-    </ClInclude>
     <ClInclude Include="HeaderButton.h">
       <Filter>Header files</Filter>
     </ClInclude>
@@ -82,6 +76,12 @@
       <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="CostsCalculationAnimation.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="PathRestoringAnimation.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="PathFindingAnimation.h">
       <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
