Update cmakelists and readme

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-project ("labirint-pathfinder")
+project ("labyrinth-pathfinder")
 
+# Leave next line, only in case you have SFML compiled for static linkage.
 set(SFML_STATIC_LIBRARIES TRUE)
+
 find_package(SFML 2.5 REQUIRED graphics)
 
 include_directories(${SFML_INCLUDE_DIR})
-add_executable (labirint-pathfinder "src/main.cpp"  "src/calculateCosts.h" "src/calculateCosts.cpp" "src/PathfinderGUI.h" "src/buildPath.h" "src/buildPath.cpp" "src/PathfinderGUI.cpp" "src/MatrixNode.h" "src/MatrixNode.cpp" "src/LabyrinthMatrix.h" "src/LabyrinthMatrix.cpp" "src/MatrixLayout.h" "src/MatrixLayout.cpp"   "src/HeaderLayout.cpp" "src/HeaderLayout.h" "src/MatrixLayoutNode.h" "src/MatrixLayoutNode.cpp")
+file(GLOB_RECURSE sources src/*.cpp src/*.h)
+add_executable (labyrinth-pathfinder ${sources})
 
-target_link_libraries(labirint-pathfinder sfml-graphics)
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Roboto-Medium.ttf
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+target_link_libraries(labyrinth-pathfinder sfml-graphics)
